# PuzzlePieces

./: .eslintignore  .eslintrc.js  .firebaserc  .gitignore  App.js  README.md  app.json  docker-compose.yml  firebase.json  package.json
.expo-shared/: assets.json
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: app.py  defs.py  utils.py
config/: firebase.js
frontend/: .prettierrc.js  package.json
frontend/public/: index.html
frontend/src/: App.js  colors.js  firebase.js  firebaseConfig.js  index.js
frontend/src/components/: AboutPage.js  CreateGame.js  FinishPage.js  Game.js  GameRound.js  Homepage.js  InitialApp.js  Leaderboard.js  RatingScreen.js  RefCanvasDraw.js  SoundButton.js  Space.js  Timer.js  TopBar.js  TransitionScreen.js  WaitingRoom.js  style.js
frontend/src/context/: mute-context.js
frontend/src/hooks/: useWindowDimensions.js
