[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DrizzleCo <jmslca123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
image-slicer = "^2.1.1"
firebase-admin = "^4.5.0"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
